# codex_fork

./: .agent_prompt_pr-6-dependabot-github_actions-dtolnay-rust-toolchain-1.100..txt  .gitignore  AGENTS.md  ANALYSIS.md  CLAUDE.md  DESIGN.md  EXTENSION_COMPLETION_STATUS.md  IMPLEMENTATION-PLAN.md  README.md  SPEC.md  TOOL_HOOKS_IMPLEMENTATION.md  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: copilot.md
.claude/hooks/: post_tool_use.sh  pre_tool_use.sh  statusline.sh
.codexplus/hooks/: shared_utils.py
.github/workflows/: ci.yml  npm-publish.yml  rust-ci.yml  rust-release.yml  scaffold-ci.yml  sdk.yml
codex-cli/: package-lock.json  package.json
codex-rs/: Cargo.toml  rust-toolchain.toml
codex-rs/chatgpt/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/core/src/: shell.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
codex-rs/extensions/: Cargo.toml
codex-rs/extensions/examples/: demo.rs
codex-rs/extensions/src/: error.rs  hooks.rs  lib.rs  settings.rs  slash_commands.rs
codex-rs/extensions/tests/: integration_tests.rs
codex-rs/login/: Cargo.toml
codex-rs/protocol/src/: protocol.rs
codex-rs/responses-api-proxy/npm/: package.json
codex-rs/scripts/: setup-windows.ps1
codex-rs/tui/: Cargo.toml  config.toml
codex-rs/tui/src/: chatwidget.rs  history_cell.rs
docs/conflicts/dependabot-cargo-codex-rs-clap_complete-4.5.60-pr11/: conflict_summary.md  index.md
docs/testing/: CI-VALIDATION-REPORT.md  FINAL-VALIDATION.md  HOOK-BLOCKING-TEST-COVERAGE.md  INTEGRATION-TEST-REPORT.md  PR13-TEST-RESULTS.md
examples/claude/: README.md  settings.json
examples/claude/commands/: cons.md  copilot.md  echo.md  hello.md  history.md  reviewdeep.md  test-args.md
scripts/: claude_mcp.sh  coverage.sh  run_lint.sh  run_tests_with_coverage.sh  stage_npm_packages.py
sdk/typescript/: package.json
(+14 files in other folders)
