[package]
name = "codex-extensions"
version.workspace = true
edition.workspace = true

[dependencies]
# External dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["process", "time", "fs", "io-util", "rt-multi-thread"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
